# deprecated

./: Cargo.toml  README.md
vercre-core/: Cargo.toml  README.md
vercre-core/src/: lib.rs
vercre-vci/: Cargo.toml  README.md
vercre-vci/src/: lib.rs
vercre-vp/: Cargo.toml  README.md
vercre-vp/src/: lib.rs
vercre-wallet/: Cargo.toml  README.md
vercre-wallet/src/: lib.rs
