[workspace]
members = ["vercre-wallet", "vercre-core", "vercre-vci", "vercre-vp"]
resolver = "2"

[workspace.package]
authors = ["Vercre"]
categories = ["authentication", "cryptography", "data-structures"]
edition = "2021"
exclude = [".*", "/docs", "snapshots/"]
homepage = "https://vercre.io"
keywords = ["credentials", "decentralized", "identity", "openid", "verifiable"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/vercre/vercre"
rust-version = "1.80"
version = "0.1.0-alpha.5"
